<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.app.bathroomActivity"
    android:background="@color/homeback">

    <Button
        android:id="@+id/roomslightimg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/roomlight"
        android:background="@drawable/rooms_light"
        android:layout_marginTop="90dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>
        <!--image attribute is src cahnged to backgrnd for button-->

    <TextView
        android:id="@+id/togglebathlit"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/roomslightimg"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/roomslightimg"
        android:gravity="center"
        android:text="@string/off"
        android:textColor="@color/colorRed"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bathroomlighttxt"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_below="@id/roomslightimg"
        android:text="@string/roomlight"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>


    <Button
        android:id="@+id/bathroommicro"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:contentDescription="@string/doormicro"
        android:layout_marginTop="400dp"
        android:background="@drawable/door_micro"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/bath_command_here"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@id/bathroommicro"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/commandhere"/>


</RelativeLayout>
