<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welback"
    tools:context="com.smarthome.app.welcomeActivity">

    <ImageView
        android:id="@+id/homesplash"
        android:layout_width="119dp"
        android:layout_height="132dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/splash_home"
        app:srcCompat="@drawable/splash_home_image" />

    <ImageView
        android:id="@+id/smarthomesplash"
        android:layout_width="316dp"
        android:layout_height="176dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/welcometo"
        android:layout_marginTop="9dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/splash_smarthome"
        app:srcCompat="@drawable/splash_smarthome_image" />

    <!-- (android:layout_alignStart="@+id/welcometo") or (android:layout_marginStart="25dp)-->

    <ImageView
        android:id="@+id/welcometo"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/splash_welcometo"
        app:srcCompat="@drawable/splash_welcometo_image" />


</RelativeLayout>