<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.app.doorActivity"
    android:background="@color/homeback">

    <ImageView
        android:id="@+id/doorfrontimg"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:contentDescription="@string/frontdoor"
        android:src="@drawable/door_front"
        android:layout_marginTop="90dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/imagebtn_back"
        android:padding="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/togglefdoor"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/doorfrontimg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/doorfrontimg"
        android:gravity="center"
        android:text="@string/off"
        android:textSize="20sp"
        android:textColor="@color/colorRed"/>
    <!--toEndof so that it comes after end
        marginstart is distance from img end to its place
        margintop is distnace from img's margin to its own margin
        aligntop means align its own top sam eas image's top
        gravity is for internal padding to bring to center and get fitted-->


    <TextView
        android:id="@+id/frontdoortxt"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_alignEnd="@+id/doorfrontimg"
        android:layout_below="@+id/doorfrontimg"
        android:text="@string/frontdoor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/doorbackimg"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:contentDescription="@string/backdoor"
        android:src="@drawable/door_back"
        android:layout_below="@+id/frontdoortxt"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/imagebtn_back"
        android:padding="1dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/togglebdoor"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/doorbackimg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/doorbackimg"
        android:gravity="center"
        android:text="@string/off"
        android:textSize="20sp"
        android:textColor="@color/colorRed"/>

    <TextView
        android:id="@+id/backdoortxt"
        android:layout_width="118dp"
        android:layout_height="26dp"
        android:layout_alignEnd="@+id/doorbackimg"
        android:layout_below="@+id/doorbackimg"
        android:text="@string/backdoor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/doormicroimg"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:contentDescription="@string/doormicro"
        android:layout_marginTop="400dp"
        android:background="@drawable/door_micro"
        android:layout_centerHorizontal="true"/>
    <!--android:layout_below="@+id/backdoortxt"
        android:layout_marginTop="30dp"-->

    <EditText
        android:id="@+id/command_here"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@id/doormicroimg"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/commandhere"/>

</RelativeLayout>
